@@ -28,6 +28,7 @@ Version 1.3.4+svn:
      instead of "[or]cond1[/or][or]cond2[/or]"
    * fix a bug where empty conditionals returned false
    * now [special_filter] supports [and],[or], and [not] (instead of just NOT)
+   * now standard unit filter supports [and],[or], and [not] (was just [not])
  * miscellaneous and bug fixes
    * fix renames causing OOS when made after moves or recruits
    * fix a minor glitch when selecting the leftmost menu heading
